# ruddr-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: ci.yaml
src/: lib.rs
src/client/: client.rs  mod.rs  request.rs
src/client/client/: tests.rs
src/client/request/: tests.rs
src/interface/: allocation.rs  cost.rs  customer.rs  expense_item.rs  expense_report.rs  member.rs  mod.rs  project.rs  read.rs  role.rs  time.rs  util.rs  utilization.rs
src/interface/allocation/: tests.rs
src/interface/cost/: tests.rs
src/interface/customer/: tests.rs
src/interface/expense_item/: tests.rs
src/interface/expense_report/: tests.rs
src/interface/member/: tests.rs
src/interface/project/: tests.rs
src/interface/role/: tests.rs
src/interface/time/: tests.rs
src/interface/utilization/: tests.rs
src/model/: allocation.rs  client.rs  cost.rs  customer.rs  enums.rs  expense_item.rs  expense_report.rs  member.rs  mod.rs  project.rs  reader.rs  role.rs  shared.rs  time.rs  types.rs  utilization.rs
src/model/allocation/: tests.rs
src/model/client/: tests.rs
src/model/cost/: tests.rs
src/model/customer/: tests.rs
src/model/enums/: tests.rs
src/model/expense_item/: tests.rs
src/model/expense_report/: tests.rs
src/model/member/: tests.rs
src/model/project/: tests.rs
src/model/role/: tests.rs
src/model/shared/: tests.rs
src/model/time/: tests.rs
src/model/types/: tests.rs
src/model/utilization/: tests.rs
tests/: interfaces.rs
