[package]
name = "ruddr"
version = "0.3.1"
edition = "2024"
authors = ["Matthew Schuchard"]
description = "A lightweight Ruddr SDK Rust crate"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mschuchard/ruddr-rust"
keywords = ["ruddr"]
categories = ["api-bindings"]
exclude = [".circleci", ".github", ".gitignore"]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
